[gd_scene load_steps=3 format=3 uid="uid://dquimy7b0ajih"]

[ext_resource type="Script" uid="uid://dvdkeqpgq75il" path="res://scripts/hud_canvas.gd" id="1_kjpnj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_031qo"]
bg_color = Color(0.08, 0.08, 0.08, 0.588235)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 0.054902)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="hud_canvas" type="CanvasLayer"]
script = ExtResource("1_kjpnj")

[node name="DebugPanel" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 136.0
grow_horizontal = 0
mouse_filter = 2

[node name="debug_bg" type="Panel" parent="DebugPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_031qo")

[node name="Control" type="MarginContainer" parent="DebugPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Control2" type="VBoxContainer" parent="DebugPanel/Control"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="HBoxContainer" type="MarginContainer" parent="DebugPanel/Control/Control2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="debug_title" type="Label" parent="DebugPanel/Control/Control2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.646752, 0.646752, 0.646752, 1)
theme_override_font_sizes/font_size = 24
text = "DEBUG MENU"
horizontal_alignment = 2

[node name="HBoxContainer2" type="MarginContainer" parent="DebugPanel/Control/Control2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="debug_fps_display" type="Label" parent="DebugPanel/Control/Control2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "60 FPS VSync ON"
horizontal_alignment = 2

[node name="Control3" type="HBoxContainer" parent="DebugPanel/Control/Control2"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="debug_tp_selector" type="OptionButton" parent="DebugPanel/Control/Control2/Control3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 2
selected = 0
item_count = 1
popup/item_0/text = "0"
popup/item_0/id = 0

[node name="debug_tp_button" type="Button" parent="DebugPanel/Control/Control2/Control3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Teleport"

[connection signal="item_selected" from="DebugPanel/Control/Control2/Control3/debug_tp_selector" to="." method="_on_select_telepoint"]
[connection signal="pressed" from="DebugPanel/Control/Control2/Control3/debug_tp_button" to="." method="_on_telepoint_tp"]
